# turing1936

./: LICENSE  README.md  tm.schema.json  tm1.json  tm2.json  turing1936.cabal
app/: Main.hs
src/: ChatGPT.hs  NOTES.md  Turing1936.hs  chatGPT_tm.py  chatGPT_tm2.py  gpt-4-mfunctions.hs
test/: Turing1936Spec.hs
